app/assets/stylesheets/components/_small_card.scss
.small-card {
  flex: none;
  position: relative;
  width: 300px;
  height: 200px;
  padding: 20px;
  text-align: center;
  border-radius: 20px;
  background-color: white;
  color: $dark-grey;
  filter: drop-shadow(0px 1px 4px rgba(0, 0, 0, 0.04));
  border : 0;
  background-color: $secondary1;
}

.small-card-connected {
  flex: none;
  position: relative;
  width: 300px;
  height: 200px;
  padding: 20px;
  text-align: center;
  border-radius: 20px;
  background-color: $beige;
  color: $dark-grey;
  filter: drop-shadow(0px 1px 4px rgba(0, 0, 0, 0.04));
  border : 0;
}

.small-card-parent {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 300px;
  height: 200px;
  padding: 20px;
  border-radius: 20px;
  background-color: $beige;
  color: $light-grey;
  border : 0;
  filter: drop-shadow(0px 1px 4px rgba(0, 0, 0, 0.04));
  word-wrap: break-word;
}

.small-card-ancestor {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 300px;
  height: 200px;
  padding: 20px;
  border-radius: 20px;
  background-color: $secondary1;
  color: black;
  border : 0;
  filter: drop-shadow(0px 1px 4px rgba(0, 0, 0, 0.04));
  margin-bottom: 24px !important;
  word-wrap: break-word;
}

.small-card-title {
  align-self: center;
  font-weight: 400;
  color: $black;
  font-weight: 400;
  font-size: 22px;
  margin-top: 0px;
}

.small-card-content {
  align-self: flex-start;
  font-size: 18px;
  text-align: center;
  word-wrap: break-word;
}

.small-card-link {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
}

.small-card:hover {
  background-color: $white;
}

.card-title {
  align-self: center;
  margin-bottom: 8px;
  font-weight: 500;
  color: $black;
  font-size: 22px;
  font-weight: 400;
  word-wrap: break-word;
  padding: 0;
}

.card-content {
  align-self: flex-start;
  font-size: 18px;
}

.small-card-roll {
  overflow: auto;
  height: 60vh;
  z-index: 2;
  border-radius: 20px;
}

.small-card-roll::-webkit-scrollbar {
  display: none;
}

